--- a/index.html
+++ b/index.html
@@ -1,26 +1,86 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <title>State of integration Kitodo and OCR-D - OCR-D Workshop</title>
     <meta charset="utf-8"/>
     <link rel="stylesheet" type="text/css" href="layout.css"/>
     <link href="https://fonts.googleapis.com/css?family=Bitter|Open+Sans" rel="stylesheet">
   </head>
   <body>
-    <script src="https://remarkjs.com/downloads/remark-0.14.0.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS_HTML&delayStartupUntil=configured" type="text/javascript"></script>
-    <script type="text/javascript">
-      var slideshow = remark.create({
-        sourceUrl: 'content.md',
-        countIncrementalSlides: false
-      });
-      // Setup MathJax
-      MathJax.Hub.Config({
-          tex2jax: {
-          skipTags: ['script', 'noscript', 'style', 'textarea', 'pre']
-          }
-      });
-      MathJax.Hub.Configured();
+<textarea id="source"> 
+    layout: true
+  
+<div class="header"></div>
+
+<div class="footer">
+  <table>
+    <tr>
+      <td style="text-align:right">Sächsische Landesbibliothek – Staats- und Universitätsbibliothek</td>
+      <td>15.12.2022</td>
+      <td style="text-align:right"><a href="https://www.slub-dresden.de/">www.slub-dresden.de</a></td>
+    </tr>
+    <tr>
+      <td style="text-align:right">Referat 2.5</td>
+      <td />
+    </tr>
+  </table>
+</div>
+
+<div class="title-footer">
+  <table>
+    <tr>
+      <td style="text-align:left"><b>Markus Weigelt</b></td>
+    </tr>
+    <tr>
+      <td style="text-align:left">Referat 2.5</td>
+    </tr>
+    <tr>
+      <td style="font-size:8pt"><b>15.12.2022</b></td>
+    </tr>
+    <tr>
+      <td style="font-size:8pt">OCR-D Workshop</td>
+    </tr>
+  </table>
+</div>
+
+---
+
+class: title-slide
+
+# OCR-D Workshop 
+## State of integration Kitodo and OCR-D
+
+---
+
+# Overview
+
+- Section 1
+  + Subsection 1
+- Section 2
+
+---
+
+class: part-slide
+
+# Topic 1
+
+---
+
+class: part-slide
+
+# Many thanks for your attention!
+
+<center>
+  <a href="https://markusweigelt.github.io/OCR-D-Workshop">markusweigelt.github.io/OCR-D-Workshop</a>
+</center>
+
+    
+    </textarea>
+    <script src="https://remarkjs.com/downloads/remark-latest.min.js">
+    </script>
+    <script>
+      var slideshow = remark.create();
     </script>
   </body>
 </html>
