--- a/index.html
+++ b/index.html
@@ -63,8 +63,12 @@ class: title-slide
 
 class: part-slide
 
-# Topic 1
+# Documenation
 
+<center>
+  <a href="https://github.com/slub/ocrd_kitodo">github.com/slub/ocrd_kitodo</a>
+</center>  
+  
 ---
 
 class: part-slide
