--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link href="https://fonts.googleapis.com/css?family=Bitter|Open+Sans" rel="stylesheet">
   </head>
   <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS_HTML&delayStartupUntil=configured" type="text/javascript"></script>
+    <script src="https://remarkjs.com/downloads/remark-0.14.0.min.js" type="text/javascript"></script>
 <textarea id="source"> 
-    layout: true
+  
+layout: true
   
 <div class="header"></div>
 
@@ -47,6 +48,7 @@
 ---
 
 class: title-slide
+count: false
 
 # OCR-D Workshop 
 ## State of integration Kitodo and OCR-D
@@ -60,7 +62,6 @@ class: title-slide
 - Section 2
 
 ---
-
 class: part-slide
 
 # Documenation
@@ -70,7 +71,6 @@ class: part-slide
 </center>  
   
 ---
-
 class: part-slide
 
 # Many thanks for your attention!
@@ -79,12 +79,12 @@ class: part-slide
   <a href="https://markusweigelt.github.io/OCR-D-Workshop">markusweigelt.github.io/OCR-D-Workshop</a>
 </center>
 
-    
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js">
     </script>
     <script>
       var slideshow = remark.create();
     </script>
+
   </body>
 </html>
