--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ class: part-slide
 # Documenation
 
 <center>
-  <a href="https://github.com/slub/ocrd_kitodo">github.com/slub/ocrd_kitodo</a>
+  <a href="https://slub.github.io/ocrd_kitodo">slub.github.io/ocrd_kitodo</a>
 </center>  
   
 ---
