--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>State of integration Kitodo and OCR-D - OCR-D Workshop</title>
+    <title>State of architecture, services and integration Kitodo and OCR-D - OCR-D Workshop</title>
     <meta charset="utf-8"/>
     <link rel="stylesheet" type="text/css" href="layout.css"/>
     <link href="https://fonts.googleapis.com/css?family=Bitter|Open+Sans" rel="stylesheet">
@@ -48,7 +48,7 @@ class: title-slide
 count: false
 
 # OCR-D Workshop 
-## State of integration Kitodo and OCR-D
+## State of architecture, services and integration Kitodo and OCR-D
 
 ---
 class: part-slide
